--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Routes\\": "routes/"
+            "Routes\\": "routes/",
+            "Core\\": "core/"
         }
     },
     "authors": [
@@ -13,7 +14,9 @@
             "email": "abdallahels2ed@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "psr/container": "^2.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^9"
     }
